App/Receipt: use an inline button for 'Select Products' and fix the collapse/expand interaction

--- a/assets/app/src/styles/generic.scss
+++ b/assets/app/src/styles/generic.scss
@@ -106,6 +106,18 @@ button.submit-button:not([disabled]) {
 	}
 }
 
+button.inline-button {
+	background: inherit;
+	color: inherit;
+
+	&:focus,
+	&:hover,
+	&:active {
+		color: inherit;
+		background: inherit;
+	}
+}
+
 .dashicons,
 .dashicons-before:before {
 	margin-bottom: -1px;
